<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_sf"
    tools:context=".CharactSheetSF">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="102dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="#F44336"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.339"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168" />

    <EditText
        android:id="@+id/editTextWeapons"
        android:layout_width="117dp"
        android:layout_height="81dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/weapons"
        android:inputType="textMultiLine"
        android:textColor="#F44336"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224" />

    <EditText
        android:id="@+id/editTextCompPP"
        android:layout_width="337dp"
        android:layout_height="85dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/comppp"
        android:inputType="textMultiLine"
        android:textColor="#F44336"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585" />

    <EditText
        android:id="@+id/editTextCompVaisseau"
        android:layout_width="341dp"
        android:layout_height="70dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/compv"
        android:inputType="textMultiLine"
        android:textColor="#F44336"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727" />

    <EditText
        android:id="@+id/editTextInv"
        android:layout_width="222dp"
        android:layout_height="76dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/inventory"
        android:inputType="textMultiLine"
        android:textColor="#F44336"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.798"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.874" />

    <EditText
        android:id="@+id/editTextTete"
        android:layout_width="53dp"
        android:layout_height="34dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="#F44336"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.331"
        tools:text="17" />

    <EditText
        android:id="@+id/editTextJambes"
        android:layout_width="51dp"
        android:layout_height="34dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="#F44336"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408"
        tools:text="17" />

    <EditText
        android:id="@+id/editTextCorps"
        android:layout_width="52dp"
        android:layout_height="33dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="#F44336"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442"
        tools:text="17" />

    <EditText
        android:id="@+id/editTextBras"
        android:layout_width="50dp"
        android:layout_height="34dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="#F44336"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368"
        tools:text="17" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="52dp"
        android:layout_height="26dp"
        android:background="#E7A992"
        android:text="@string/btnTxt"
        android:textColor="#F44336"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <ImageView
        android:id="@+id/imageHpHead"
        android:layout_width="167dp"
        android:layout_height="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328"
        app:srcCompat="@drawable/pvsf17" />

    <ImageView
        android:id="@+id/imageHpArms"
        android:layout_width="167dp"
        android:layout_height="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366"
        app:srcCompat="@drawable/pvsf17" />

    <ImageView
        android:id="@+id/imageHpLegs"
        android:layout_width="167dp"
        android:layout_height="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:srcCompat="@drawable/pvsf17" />

    <ImageView
        android:id="@+id/imageHpBody"
        android:layout_width="167dp"
        android:layout_height="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443"
        app:srcCompat="@drawable/pvsf17" />

</androidx.constraintlayout.widget.ConstraintLayout>