<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_classic"
    tools:context=".CharactSheetClassic">

    <ImageView
        android:id="@+id/imageHpArms"
        android:layout_width="217dp"
        android:layout_height="30dp"
        android:src="@drawable/pvcl17"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198" />

    <ImageView
        android:id="@+id/imageHpHead"
        android:layout_width="217dp"
        android:layout_height="30dp"
        android:src="@drawable/pvcl17"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155" />

    <ImageView
        android:id="@+id/imageHpBody"
        android:layout_width="217dp"
        android:layout_height="30dp"
        android:src="@drawable/pvcl17"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <ImageView
        android:id="@+id/imageHpLegs"
        android:layout_width="217dp"
        android:layout_height="30dp"
        android:src="@drawable/pvcl17"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="96dp"
        android:layout_height="22dp"
        android:hint="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.276"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

    <EditText
        android:id="@+id/txtCompNav"
        android:layout_width="333dp"
        android:layout_height="61dp"
        android:ems="10"
        android:hint="@string/compv"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.553" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="186dp"
        android:layout_height="134dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:ems="10"
        android:hint="@string/inventory"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794" />

    <EditText
        android:id="@+id/txtComppp"
        android:layout_width="354dp"
        android:layout_height="70dp"
        android:ems="10"
        android:hint="@string/comppp"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.414" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="138dp"
        android:layout_height="116dp"
        android:ems="10"
        android:hint="@string/weapons"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.782" />

    <EditText
        android:id="@+id/txtHpHead"
        android:layout_width="53dp"
        android:layout_height="39dp"
        android:ems="10"
        android:hint="17"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <EditText
        android:id="@+id/txtHpLegs"
        android:layout_width="55dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="17"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <EditText
        android:id="@+id/txtHpBody"
        android:layout_width="55dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="17"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285" />

    <EditText
        android:id="@+id/txtHpArms"
        android:layout_width="53dp"
        android:layout_height="39dp"
        android:ems="10"
        android:hint="17"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="41dp"
        android:layout_height="19dp"
        android:background="#470A0A"
        android:text="OK"
        android:textColor="#FFFDFD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348" />

</androidx.constraintlayout.widget.ConstraintLayout>